--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "eslint-utils": "^1.4.2",
     "lodash": "^4.17.14",
     "lodash.template": "^4.5.0",
+    "mixin-deep": "^2.0.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "react-toastify": "^5.3.1"
+    "react-toastify": "^5.3.1",
+    "set-value": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
