--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "react-scripts": "5.0.1",
     "react-toastify": "^5.3.1",
     "set-value": "^3.0.1"
   },
+  "homepage": "https://MarleeG.github.io/TrackPad/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
